# generated/java/src/main/java/com/blizzardapi/openapi/model/PlayableSpecializationDetailsDTO.java
@@ -2,7 +2,7 @@
  * Blizzard API
  * An OpenAPI specification for Blizzard API
  *
- * The version of the OpenAPI document: 0.2.0
+ * The version of the OpenAPI document: 0.2.1
  * 
  *
  * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
@@ -16,6 +16,7 @@ package com.blizzardapi.openapi.model;
 import java.util.Objects;
 import com.blizzardapi.openapi.model.GenderDTO;
 import com.blizzardapi.openapi.model.IndexDataDTO;
+import com.blizzardapi.openapi.model.IndexDataWithoutIdDTO;
 import com.blizzardapi.openapi.model.NameDataDTO;
 import com.blizzardapi.openapi.model.RoleIndexDTO;
 import com.blizzardapi.openapi.model.TalentIndexDTO;
@@ -84,7 +85,7 @@ public class PlayableSpecializationDetailsDTO {
 
   public static final String SERIALIZED_NAME_SPEC_TALENT_TREE = "spec_talent_tree";
   @SerializedName(SERIALIZED_NAME_SPEC_TALENT_TREE)
-  private IndexDataDTO specTalentTree;
+  private IndexDataWithoutIdDTO specTalentTree;
 
   public static final String SERIALIZED_NAME_POWER_TYPE = "power_type";
   @SerializedName(SERIALIZED_NAME_POWER_TYPE)
@@ -219,7 +220,7 @@ public class PlayableSpecializationDetailsDTO {
   }
 
 
-  public PlayableSpecializationDetailsDTO specTalentTree(IndexDataDTO specTalentTree) {
+  public PlayableSpecializationDetailsDTO specTalentTree(IndexDataWithoutIdDTO specTalentTree) {
     this.specTalentTree = specTalentTree;
     return this;
   }
@@ -229,11 +230,11 @@ public class PlayableSpecializationDetailsDTO {
    * @return specTalentTree
   **/
   @javax.annotation.Nullable
-  public IndexDataDTO getSpecTalentTree() {
+  public IndexDataWithoutIdDTO getSpecTalentTree() {
     return specTalentTree;
   }
 
-  public void setSpecTalentTree(IndexDataDTO specTalentTree) {
+  public void setSpecTalentTree(IndexDataWithoutIdDTO specTalentTree) {
     this.specTalentTree = specTalentTree;
   }
 
@@ -445,7 +446,7 @@ public class PlayableSpecializationDetailsDTO {
       };
       // validate the optional field `spec_talent_tree`
       if (jsonObj.get("spec_talent_tree") != null && !jsonObj.get("spec_talent_tree").isJsonNull()) {
-        IndexDataDTO.validateJsonElement(jsonObj.get("spec_talent_tree"));
+        IndexDataWithoutIdDTO.validateJsonElement(jsonObj.get("spec_talent_tree"));
       }
       // validate the required field `power_type`
       IndexDataDTO.validateJsonElement(jsonObj.get("power_type"));
